--- a/P5/README
+++ b/P5/README
@@ -1,3 +1,14 @@
+To the TA that it may concern,
+
+In this project the two desugb patterns used were the singleton and factory patterns.
+- Singleton
+
+- Factory
+
+
+
+/*******************************Ignore Below*************************************/
+Notes:
 http://tetris.wikia.com/wiki/SRS
 
 Comments: 10% (this has increased a lot)
