--- a/P5/README
+++ b/P5/README
@@ -16,6 +16,7 @@ Left arrow to move left
 Right arrow to move right
 Down arrow for soft drop (Extra credit)
 Space bar for hard drop (Implemented but doesn't work
+Enter will pause the game
 
 Writers of this program:
 Josue Alvarez
